# PasswordManager

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  config_example.ini  h.txt
include/: CommandHistory.h  Operations.h  PasswordStruct.h
src/: ArgParsing.h  ChipherStruct.h  ChipherStructOperations.h  CommandHistory.c  ConfigurationStruct.h  FileFunctions.c  FileFunctions.h  Functions.c  Functions.h  Operations.c  Operations.h  PasswordManager.c  PasswordStruct.c  PasswordStruct.h
src/ArgParsing/: ArgParsing.h  ProcessParseResult.h  ShowHelp.h
